fix ui overflow

--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -1,8 +1,13 @@
 .container {
-    width: 80%;
-    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 2rem;
+    position: relative;
+    justify-content: start;
+    height: 100%;
+    flex: 1;
+    
 }
 .redirect_button{
     font-weight: 600;
