--- a/client/src/components/GridView/gridview.module.css
+++ b/client/src/components/GridView/gridview.module.css
@@ -4,6 +4,7 @@
     justify-content: start;
     width: 100%;
     gap: 2rem;
+    flex: 1;
     min-height: 100%;
 }
 
@@ -27,7 +28,7 @@
     object-position: center;
     object-fit: cover;
     width: 100%;
-    max-width: 300px;
+    max-width: 250px;
 }
 .primary_image {
     background-color: white;
@@ -57,6 +58,16 @@
     font-weight: 500;
 }
 
+@media (max-width: 580px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: start;
+        width: 100%;
+        gap: 0.5rem;
+        margin: 0 auto;
+        padding: 20px;
+    }
+}
 
 @media (max-width: 480px) {
     .container {
