--- a/client/src/pages/CartPage/cartpage.module.css
+++ b/client/src/pages/CartPage/cartpage.module.css
@@ -1,3 +1,13 @@
+/* .container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+} */
+
+
 .container{
     width: 100%;
     display: flex;
@@ -7,3 +17,28 @@
     height: 100vh;
 }
 
+.home {
+    width: 65%;
+    /* height: 100%; */
+    flex: 1;
+}
+
+@media (max-width: 900px) {
+    .home{
+        width: 80% ;
+        display: flex;
+    }
+}
+
+@media (max-width: 800px) {
+    .home{
+        width: 90% ;
+        display: flex;
+    }
+}
+@media (max-width: 480px) {
+    .home{
+        width: 90% ;
+        display: flex;
+    }
+}
