--- a/client/src/pages/HomePage/homepage.module.css
+++ b/client/src/pages/HomePage/homepage.module.css
@@ -1,9 +1,34 @@
-.container {
+.container{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: space-between;
     align-items: center;
-  
+    height: 100vh;
 }
 
+.home {
+    width: 65%;
+    /* height: 100%; */
+    flex: 1;
+}
+
+@media (max-width: 900px) {
+    .home{
+        width: 80% ;
+        display: flex;
+    }
+}
+
+@media (max-width: 800px) {
+    .home{
+        width: 90% ;
+        display: flex;
+    }
+}
+@media (max-width: 480px) {
+    .home{
+        width: 100% ;
+        display: flex;
+    }
+}
